--- a/Makefile.common
+++ b/Makefile.common
@@ -123,7 +123,7 @@ manage:
 		argocd cluster add -y --upsert "k3d-$$a"; \
 		control apply -f "app/e/k3d-$$a.yaml"; \
 		if nc -z -v localhost 8200 2>/dev/null; then \
-			$(MAKE) vault-trust "k=k3d-$$a"; \
+			env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" $(MAKE) vault-trust "k=k3d-$$a"; \
 			"$$a" rollout restart deployment -n external-secrets external-secrets || true; \
 			fi; \
 		done
@@ -252,10 +252,6 @@ vault-trust:
 
 vault-shell:
 	@env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" bash
-
-vault-trust-control:
-	@env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" $(MAKE) vault-trust k=k3d-control
-	control exec control-0 -c vault-agent -- pkill -9 'vaul[t]'
 
 vault-test:
 	@"$(context)" exec -ti -c code-server $(pod) -- bash -c 'env VAULT_ADDR=http://$(tailscale ip -4):8200 ~/bin/e vault write -field=token "auth/$(k)/login" role=default jwt=$$(cat /run/secrets/kubernetes.io/serviceaccount/token)'
