--- a/etc/vault-agent.yaml
+++ b/etc/vault-agent.yaml
@@ -9,7 +9,7 @@ vault {
 
 auto_auth {
   method "kubernetes" {
-    mount_path = "auth/pod"
+    mount_path = "auth/k3d-control"
     config = {
       role = "dev"
     }
