--- a/Makefile.common
+++ b/Makefile.common
@@ -124,7 +124,7 @@ manage:
 		control apply -f "app/e/k3d-$$a.yaml"; \
 		if nc -z -v localhost 8200 2>/dev/null; then \
 			env VAULT_ADDR="http://localhost:8200" VAULT_TOKEN="$$(pass Initial_Root_Token)" $(MAKE) vault-trust "k=k3d-$$a"; \
-			"$$a" rollout restart deployment -n external-secrets external-secrets || true; \
+			"$$a" rollout restart deployment -n external-secrets external-secrets 2>/dev/null || true; \
 			fi; \
 		done
 
