make rancher dir

--- a/Makefile.common
+++ b/Makefile.common
@@ -277,6 +277,7 @@ this:
 	mkdir tmp
 	mkdir -p tmp/$(name)/var/lib/tailscale
 	mkdir -p tmp/$(name)/var/lib/tailscale/pod
+	mkdir -p tmp/$(name)/var/lib/rancher/k3s/server/tls
 	(cd tmp/$(name) && pass tailscale_k3d-$(name) | base64 -d | tar xvf -)
 	(cd tmp/$(name)/var/lib/tailscale/pod && pass tailscale_$(name)-0 | base64 -d | tar xvf -)
 	for a in sa-signer.key sa-signer.key.pub sa-signer-pkcs8.pub; do (cd tmp/$(name)/var/lib/rancher/k3s/server/tls && pass piw-$(name)-$$a | base64 -d | tar xvf -); done
