--- a/etc/k3d.yaml
+++ b/etc/k3d.yaml
@@ -48,13 +48,13 @@ options:
       - arg: --kube-apiserver-arg=--service-account-key-file=/var/lib/rancher/k3s/server/tls/sa-signer-pkcs8.pub
         nodeFilters:
           - server:0
-      - arg: --kube-apiserver-arg=--service-account-signing-key-file /var/lib/rancher/k3s/server/tls/sa-signer.key
+      - arg: --kube-apiserver-arg=--service-account-signing-key-file=/var/lib/rancher/k3s/server/tls/sa-signer.key
         nodeFilters:
           - server:0
-      - arg: --kube-apiserver-arg=--service-account-issuer raw.githubusercontent.com/amanibhavam/amanibhavam.github.io/master/v8
+      - arg: --kube-apiserver-arg=--service-account-issuer=raw.githubusercontent.com/amanibhavam/amanibhavam.github.io/master/v8
         nodeFilters:
           - server:0
-      - arg: --kube-apiserver-arg=--api-audiences https://kubernetes.default.svc.cluster.local,sts.amazonaws.com
+      - arg: --kube-apiserver-arg=--api-audiences=https://kubernetes.default.svc.cluster.local,sts.amazonaws.com
         nodeFilters:
           - server:0
   kubeconfig:
