--- a/etc/k3d.yaml
+++ b/etc/k3d.yaml
@@ -51,7 +51,7 @@ options:
       - arg: --kube-apiserver-arg=--service-account-signing-key-file /var/lib/rancher/k3s/server/tls/sa-signer.key
         nodeFilters:
           - server:0
-      - arg: --kube-apiserver-arg=--service-account-issuer raw.githubusercontent.com/amanibhavam/amanibhavam.github.io/master/v8
+      - arg: --kube-apiserver-arg=--service-account-issuer raw.githubusercontent.com/amanibhavam/amanibhavam.github.io/master/v8/
         nodeFilters:
           - server:0
       - arg: --kube-apiserver-arg=--api-audiences https://kubernetes.default.svc.cluster.local,sts.amazonaws.com
