--- a/Makefile.common
+++ b/Makefile.common
@@ -328,11 +328,6 @@ control: # Provision control plane
 		$(MAKE) this name=$@
 	docker --context=host system prune -f
 
-meh:
-	env DIGITALOCEAN_ACCESS_TOKEN="$$(pass DIGITALOCEAN_ACCESS_TOKEN)" \
-		doctl compute droplet create meh --region sfo3 --image 118023753 --size s-1vcpu-1gb --tag-name k3d --wait \
-		--user-data-file <(cat etc/droplet-user-data-minimal.template)
-
 droplet:
 	$(MAKE) dropoff
 	env DIGITALOCEAN_ACCESS_TOKEN="$$(pass DIGITALOCEAN_ACCESS_TOKEN)" \
@@ -342,6 +337,12 @@ droplet:
 			| sed 's#_CONTROLIP_#'$$(host k3d-control.$$(wait-tailscale-domain | cut -d. -f2-) | awk '{print $$NF}')'#' \
 			| sed 's#_TSKEY_#'$$(pass k3d-control-tskey)'#' \
 			| sed 's#_K3STOKEN_#'$$(docker --context host exec k3d-control-server-0 cat /var/lib/rancher/k3s/server/node-token)'#')
+ec2:
+	@cat etc/ec2-user-data.template \
+		| sed 's#_CONTROLIP_#'$$(host k3d-control.$$(wait-tailscale-domain | cut -d. -f2-) | awk '{print $$NF}')'#' \
+		| sed 's#_TSKEY_#'$$(pass k3d-control-tskey)'#' \
+		| sed 's#_K3STOKEN_#'$$(docker --context host exec k3d-control-server-0 cat /var/lib/rancher/k3s/server/node-token)'#' \
+		| control apply -f -
 
 dropoff:
 	-control delete -n kube-system secret k3d-control-droplet$(n).node-password.k3s
