--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ARGO=3.4.2
-ARGOCD=2.5.0-rc3
+ARGOCD=2.5.0
 ASDF=0.10.2
 ASDFX=0.10.2
 AWSCLI=2.7.13
@@ -19,14 +19,14 @@ DIFFT=0.37.0
 DOCKER=20.10.18
 DOCTL=1.84.1
 EARTHLY=0.6.27
-FLYCTL=0.0.419
+FLYCTL=0.0.420
 FULCIO=1.0.0
 GH=2.18.1
 GOLANG=1.19.2
 GORELEASER=1.12.3
 GRPCURL=1.8.7
 HELM=3.10.1
-HOF=0.6.7-rc.2
+HOF=0.6.7
 HUBBLE=0.10.0
 JLESS=0.8.0
 K3D=5.4.6
@@ -64,7 +64,7 @@ TEMPORAL=1.18.0
 TEMPORALITE=0.2.0
 TERRAFORM=1.3.3
 TERRAGRUNT=0.39.2
-TILT=0.30.9
+TILT=0.30.10
 TURBOREPO=1.5.5
 UBUNTU=ubuntu:focal-20220826
 VAULT=1.12.0
