--- a/Makefile.common
+++ b/Makefile.common
@@ -324,7 +324,7 @@ control: # Provision control plane
 	env DEFN_DEV_HOST_PORT=6443 DEFN_DEV_HOST_API=127.0.0.1 \
 		DEFN_DEV_NAME=k3d-$@ \
 		DEFN_DEV_MACOS=1 \
-		DEFN_DEV_HOST_PORTMAPS="-p 443:443@server:0 -p 80:80@server:0" \
+		DEFN_DEV_HOST_PORTMAPS="-p 443:443@server:0 -p 80:80@server:0 -p 8085:18085@server:0" \
 		PATH="$$PATH:$(shell pwd)/bin" \
 		$(MAKE) this name=$@
 	docker --context=host system prune -f
