fixed code-server 4.8

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ CADDY=2.6.2
 CDKTF=0.13.0
 CILIUM=0.12.1
 CLOUDFLARED=2022.10.2
-CODESERVER=4.7.1
+CODESERVER=4.8.1-rc.1
 CODESERVER_BUMP=2
 COREDNS=1.10.0
 COSIGN=1.13.1
