upgrade all the things

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ DIFFT=0.37.0
 DOCKER=20.10.18
 DOCTL=1.84.1
 EARTHLY=0.6.28
-FLYCTL=0.0.421
+FLYCTL=0.0.424
 FULCIO=1.0.0
 GH=2.18.1
 GOLANG=1.19.2
@@ -44,11 +44,11 @@ LITESTREAM=0.3.9
 LOFT=2.2.2
 NERDCTL=1.0.0
 NODEJS=18.12.0
-NOMAD=1.4.1
+NOMAD=1.4.2
 NBB=0.7.135
 NPM=8.19.2
 ORAS=0.15.1
-PACKER=1.8.3
+PACKER=1.8.4
 PNPM=7.13.1
 POWERLINE=1.22.1
 PROTOC=3.20.1
@@ -57,7 +57,7 @@ REKOR=1.0.0
 RUST=1.64.0
 SHELLCHECK=0.8.0
 SHFMT=3.5.1
-STEAMPIPE=0.16.4
+STEAMPIPE=0.17.0-rc.0
 STEP=0.22.0
 SWITCH=0.7.2
 TAILSCALE=1.32.1
