--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -6,7 +6,7 @@ build:
 	docker build -t 169.254.32.1:5000/defn/k3d:$(name) --build-arg DEFN_DEV_ARCHIVE="$(DEFN_DEV_ARCHIVE)" --build-arg DEFN_DEV_FROM="$(DEFN_DEV_FROM)" .
 
 mint:
-	docker run --rm -ti --privileged --entrypoint sh 169.254.32.1:5000/workspace -c \
+	docker run --rm -ti --privileged --entrypoint sh ghcr.io/defn/dev -c \
 		"sudo mkdir -p /var/lib/tailscale; \
 		sudo /usr/sbin/tailscaled -statedir /var/lib/tailscale & \
 		sudo /usr/bin/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key)); \
@@ -14,7 +14,7 @@ mint:
 		while true; do if sudo test -f /var/lib/tailscale/tailscaled.state; then domain=\`tailscale cert 2>&1 | grep ' use ' | cut -d'\"' -f2\`; sudo tailscale cert \$$domain; sudo tar cf - /var/lib/tailscale/tailscaled.state /var/lib/tailscale/certs | base64 -w 0; break; fi; sleep 1; done;" | tail -1 | pass insert -e -f tailscale_$(name)
 
 min:
-	docker run --rm -ti --privileged --entrypoint sh 169.254.32.1:5000/workspace -c \
+	docker run --rm -ti --privileged --entrypoint sh ghcr.io/defn/dev -c \
 		"sudo mkdir -p /var/lib/tailscale; \
 		sudo /usr/sbin/tailscaled -statedir /var/lib/tailscale & \
 		sudo /usr/bin/tailscale up -hostname $(name) -authkey $$(pass tailscale_$(key)); \
