--- a/Caddyfile
+++ b/Caddyfile
@@ -12,20 +12,24 @@ http://localhost {
 
 	import .caddy.workspaces/*
 
+	handle_path /vc0/* {
+		reverse_proxy http://localhost:8100
+	}
+
 	handle_path /vc1/* {
-		reverse_proxy http://localhost:8001
+		reverse_proxy http://localhost:8101
 	}
 
 	handle_path /vc2/* {
-		reverse_proxy http://localhost:8002
+		reverse_proxy http://localhost:8102
 	}
 
 	handle_path /vc3/* {
-		reverse_proxy http://localhost:8003
+		reverse_proxy http://localhost:8103
 	}
 
 	handle_path /vc4/* {
-		reverse_proxy http://localhost:8004
+		reverse_proxy http://localhost:8104
 	}
 
 	handle_path /api/* {
