run whatever is in /usr/local/bin

--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -36,5 +36,5 @@
         "/home/ubuntu/.kube/cache/**": true,
         "/home/ubuntu/work/**": true
     },
-    "terraform-ls.terraformExecPath": "/home/ubuntu/.asdf/shims/terraform"
+    "terraform-ls.terraformExecPath": "/usr/local/bin/terraform"
 }
