--- a/.env
+++ b/.env
@@ -49,7 +49,7 @@ NBB=0.7.135
 NPM=8.19.2
 ORAS=0.15.1
 PACKER=1.8.4
-PNPM=7.13.1
+PNPM=7.14.1.
 POWERLINE=1.22.1
 PROTOC=3.20.1
 PYTHON=system
@@ -66,7 +66,7 @@ TEMPORALITE=0.2.0
 TERRAFORM=1.3.3
 TERRAGRUNT=0.39.2
 TILT=0.30.10
-TURBOREPO=1.5.5
+TURBOREPO=1.6.2
 UBUNTU=ubuntu:focal-20220826
 VAULT=1.12.0
 VCLUSTER=0.12.2
