get tilt and vite working together

--- a/Caddyfile
+++ b/Caddyfile
@@ -32,6 +32,10 @@ http://localhost {
 		reverse_proxy http://localhost:8104
 	}
 
+	handle_path /tilt/* {
+		reverse_proxy http://localhost:7999
+	}
+
 	handle_path /api/* {
 		reverse_proxy http://defm
 	}
