--- a/Makefile.common
+++ b/Makefile.common
@@ -21,6 +21,8 @@ DEFN_DEV_HOST_PORT ?= "$${DEFN_DEV_HOST_PORT:-6443}"
 
 first = $(word 1, $(subst -, ,$@))
 second = $(word 2, $(subst -, ,$@))
+first_ = $(word 1, $(subst _, ,$@))
+second_ = $(word 2, $(subst _, ,$@))
 
 trust-ca:
 	sudo security add-trusted-cert -d -r trustRoot -k ~/Library/Keychains/login.keychain-db etc/ca.crt
@@ -169,19 +171,6 @@ kubeconfig:
 	-kubectl config use-context k3d-control
 	k config get-contexts
 
-vc%:
-	$(MAKE) ec2
-	kustomize build --enable-helm ~/app/k/$@ | control apply -f -
-	while ! control -n $@ get secrets vc-vcluster >/dev/null; do sleep 10; done
-	$(MAKE) connect-$@
-	while ! $@ get -n kube-system pods >/dev/null; do sleep 1; done
-	argocd cluster add $@ --yes --upsert
-
-connect-%:
-	control -n $(second) get secrets vc-vcluster -o json | jq -r '.data.config | @base64d' | yq '.clusters[].cluster.server |= "https://vcluster.$(second).svc.cluster.local" | del(.["current-context"])' -y | sed 's#my-vcluster#$(second)#' > ~/.kube/$(second)
-	env KUBECONFIG=~/.kube/$(second):~/.kube/config kubectl config view --flatten > ~/.kube/config.$(second)
-	mv ~/.kube/config.$(second) ~/.kube/config 
-
 pending: # Generate pending version updates
 	$(MAKE) pending-gh
 	$(MAKE) pending-asdf
@@ -329,6 +318,19 @@ control: # Provision control plane
 		PATH="$$PATH:$(shell pwd)/bin" \
 		$(MAKE) this name=$@
 	docker --context=host system prune -f
+
+control-%:
+	$(MAKE) ec2
+	kustomize build --enable-helm ~/app/k/$@ | control apply -f -
+	while ! control -n $@ get secrets vc-vcluster >/dev/null; do sleep 10; done
+	$(MAKE) connect_$@
+	while ! $@ get -n kube-system pods >/dev/null; do sleep 1; done
+	argocd cluster add $@ --yes --upsert
+
+connect_%:
+	control -n $(second_) get secrets vc-vcluster -o json | jq -r '.data.config | @base64d' | yq '.clusters[].cluster.server |= "https://vcluster.$(second_).svc.cluster.local" | del(.["current-context"])' -y | sed 's#my-vcluster#$(second_)#' > ~/.kube/$(second_)
+	env KUBECONFIG=~/.kube/$(second_):~/.kube/config kubectl config view --flatten > ~/.kube/config.$(second_)
+	mv ~/.kube/config.$(second_) ~/.kube/config 
 
 ec2:
 	pass hello
