initialize the vcluster egg

--- a/Makefile.common
+++ b/Makefile.common
@@ -326,6 +326,7 @@ control-%:
 	$(MAKE) connect_$@
 	while ! $@ get -n kube-system pods >/dev/null; do sleep 1; done
 	argocd cluster add $@ --yes --upsert
+	$(first) apply -f app/e/vcluster-$@
 
 connect_%:
 	control -n $(second_) get secrets vc-vcluster -o json | jq -r '.data.config | @base64d' | yq '.clusters[].cluster.server |= "https://vcluster.$(second_).svc.cluster.local" | del(.["current-context"])' -y | sed 's#my-vcluster#$(second_)#' > ~/.kube/$(second_)
