--- a/Makefile.common
+++ b/Makefile.common
@@ -349,3 +349,6 @@ debug-node:
 
 debug-docker:
 	docker run -it --rm --privileged --pid=host alpine:edge nsenter -t 1 -m -u -n -i
+
+nix:
+	sh <(curl -L https://nixos.org/nix/install) --no-daemon --no-modify-profile
