run a command in the nix-shell

--- a/Makefile.common
+++ b/Makefile.common
@@ -12,7 +12,8 @@ app ?= $(shell pwd)/app
 node ?= k3d-control-server-0
 n ?=
 k ?=
-p ?= python311 python311Packages.pip python311Packages.virtualenv glibcLocales
+p ?= python311 python311Packages.pip python311Packages.virtualenv glibcLocales irssi
+r ?= irssi -n defn -c irc.efnet.org
 
 dummy_ip ?= 169.254.32.1
 
@@ -354,6 +355,6 @@ debug-docker:
 nix-install:
 	sh <(curl -L https://nixos.org/nix/install) --no-daemon --no-modify-profile
 
-# make nix-shell p="..."
+# make nix-shell p="..." r="..."
 nix-shell:
-	env LC_ALL=C.UTF-8 nix-shell -p $(p)
+	env LC_ALL=C.UTF-8 nix-shell -p $(p) --run "$(r)"
