--- a/Makefile.common
+++ b/Makefile.common
@@ -12,7 +12,7 @@ app ?= $(shell pwd)/app
 node ?= k3d-control-server-0
 n ?=
 k ?=
-p ?= python311 python311Packages.pip python311Packages.virtualenv glibcLocales irssi k9s bash
+p ?= python311 python311Packages.pip python311Packages.virtualenv glibcLocales irssi k9s bash difftastic
 r ?= bash --noprofile --norc
 
 dummy_ip ?= 169.254.32.1
