--- a/Makefile.common
+++ b/Makefile.common
@@ -12,8 +12,8 @@ app ?= $(shell pwd)/app
 node ?= k3d-control-server-0
 n ?=
 k ?=
-p ?= python311 python311Packages.pip python311Packages.virtualenv glibcLocales irssi k9s bash difftastic
-r ?= bash --noprofile --norc
+p ?= python311 python311Packages.pip python311Packages.virtualenv glibcLocales irssi k9s bash difftastic powerline-go
+r ?= bash
 
 dummy_ip ?= 169.254.32.1
 
