--- a/Makefile.common
+++ b/Makefile.common
@@ -55,7 +55,7 @@ build:
 	$(MAKE) build-site
 
 install:
-	$(MAKE) nix
+	if test -f /home/ubuntu/.nix-profile/etc/profile.d/nix.sh; then . /home/ubuntu/.nix-profile/etc/profile.d/nix.sh; fi && $(MAKE) nix
 	cd && . /home/ubuntu/.nix-profile/etc/profile.d/nix.sh && $(MAKE) install-inner
 
 install-inner:
