--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -111,9 +111,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
-    needs:
-      - build_amd
-      - build_arm
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -159,8 +156,8 @@ jobs:
           earthly --strict --push --no-output \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-all \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-all \
           	+images --repo=ghcr.io/ --tag=${TAG}
   build_k3d_amd:
     runs-on: ubuntu-latest
