--- a/.env
+++ b/.env
@@ -61,6 +61,7 @@ STEAMPIPE=0.17.0-rc.0
 STEP=0.22.0
 SWITCH=0.7.2
 TAILSCALE=1.32.1
+TELLER=1.5.6
 TEMPORAL=1.18.0
 TEMPORALITE=0.2.0
 TERRAFORM=1.3.3
