generalize docker building

--- a/nix/bash/Dockerfile
+++ b/nix/bash/Dockerfile
@@ -1,14 +1,9 @@
 # syntax=docker/dockerfile:1
 FROM ubuntu
-COPY --link nix/store/1s3ifgirxw3x89b64a6sg6pxydgz8cr1-findutils-4.9.0/ /nix/store/1s3ifgirxw3x89b64a6sg6pxydgz8cr1-findutils-4.9.0//
 COPY --link nix/store/2hmdbfccrmh7a390k8ypqgivp4rjcnc4-libidn2-2.3.2/ /nix/store/2hmdbfccrmh7a390k8ypqgivp4rjcnc4-libidn2-2.3.2//
-COPY --link nix/store/5a3k6k06abh6wzpgll6hadvsnxd9gc5z-attr-2.5.1/ /nix/store/5a3k6k06abh6wzpgll6hadvsnxd9gc5z-attr-2.5.1//
-COPY --link nix/store/67lnvnz4qd8w3q9r5pwcm9kl5fy3b2b4-gcc-11.3.0-lib/ /nix/store/67lnvnz4qd8w3q9r5pwcm9kl5fy3b2b4-gcc-11.3.0-lib//
-COPY --link nix/store/c4ljcavrnmdm28dcm8vld2szg9raj36r-acl-2.3.1/ /nix/store/c4ljcavrnmdm28dcm8vld2szg9raj36r-acl-2.3.1//
-COPY --link nix/store/ng9ympy1v966rmp0d00yaj87n7f8cn38-gmp-with-cxx-stage4-6.2.1/ /nix/store/ng9ympy1v966rmp0d00yaj87n7f8cn38-gmp-with-cxx-stage4-6.2.1//
-COPY --link nix/store/xq4g38m5ppg78z7bzfxyy2s8ii693k74-coreutils-9.1/ /nix/store/xq4g38m5ppg78z7bzfxyy2s8ii693k74-coreutils-9.1//
+COPY --link nix/store/6hxf7xfsm4sagp0fxmngjq5y27a0mg7v-dkr-0.0.1/ /nix/store/6hxf7xfsm4sagp0fxmngjq5y27a0mg7v-dkr-0.0.1//
 COPY --link nix/store/y0g1mvsr6vygr61f9znljik9kl0x0inc-bash-5.1-p16/ /nix/store/y0g1mvsr6vygr61f9znljik9kl0x0inc-bash-5.1-p16//
 COPY --link nix/store/ynn1by1qdl16q6qwwh2h7zkgrn36c6i8-glibc-2.35-163/ /nix/store/ynn1by1qdl16q6qwwh2h7zkgrn36c6i8-glibc-2.35-163//
 COPY --link nix/store/z3wzds48bkfkn05qwc90294p14hflr6n-libunistring-1.0/ /nix/store/z3wzds48bkfkn05qwc90294p14hflr6n-libunistring-1.0//
 ENTRYPOINT [ "/bin/bash" ]
-ENV PATH /nix/store/1s3ifgirxw3x89b64a6sg6pxydgz8cr1-findutils-4.9.0//bin:/nix/store/2hmdbfccrmh7a390k8ypqgivp4rjcnc4-libidn2-2.3.2//bin:/nix/store/5a3k6k06abh6wzpgll6hadvsnxd9gc5z-attr-2.5.1//bin:/nix/store/67lnvnz4qd8w3q9r5pwcm9kl5fy3b2b4-gcc-11.3.0-lib//bin:/nix/store/c4ljcavrnmdm28dcm8vld2szg9raj36r-acl-2.3.1//bin:/nix/store/ng9ympy1v966rmp0d00yaj87n7f8cn38-gmp-with-cxx-stage4-6.2.1//bin:/nix/store/xq4g38m5ppg78z7bzfxyy2s8ii693k74-coreutils-9.1//bin:/nix/store/y0g1mvsr6vygr61f9znljik9kl0x0inc-bash-5.1-p16//bin:/nix/store/ynn1by1qdl16q6qwwh2h7zkgrn36c6i8-glibc-2.35-163//bin:/nix/store/z3wzds48bkfkn05qwc90294p14hflr6n-libunistring-1.0//bin:/bin
+ENV PATH /nix/store/2hmdbfccrmh7a390k8ypqgivp4rjcnc4-libidn2-2.3.2//bin:/nix/store/6hxf7xfsm4sagp0fxmngjq5y27a0mg7v-dkr-0.0.1//bin:/nix/store/y0g1mvsr6vygr61f9znljik9kl0x0inc-bash-5.1-p16//bin:/nix/store/ynn1by1qdl16q6qwwh2h7zkgrn36c6i8-glibc-2.35-163//bin:/nix/store/z3wzds48bkfkn05qwc90294p14hflr6n-libunistring-1.0//bin:/bin
