--- a/nix/bash/Dockerfile
+++ b/nix/bash/Dockerfile
@@ -1,15 +1,9 @@
 # syntax=docker/dockerfile:1
 FROM alpine
-COPY --link nix/store/0rdvmx28phx7r8dqf01xbvc44wpm9ipx-wget-1.21.3/ /nix/store/0rdvmx28phx7r8dqf01xbvc44wpm9ipx-wget-1.21.3//
 COPY --link nix/store/2hmdbfccrmh7a390k8ypqgivp4rjcnc4-libidn2-2.3.2/ /nix/store/2hmdbfccrmh7a390k8ypqgivp4rjcnc4-libidn2-2.3.2//
-COPY --link nix/store/6549jyzmdk7mqv3wvrqbqjr02zjp9csw-zlib-1.2.13/ /nix/store/6549jyzmdk7mqv3wvrqbqjr02zjp9csw-zlib-1.2.13//
-COPY --link nix/store/c3asfannhylz6m58nrnizn7mwcsk38ss-cue-0.4.3/ /nix/store/c3asfannhylz6m58nrnizn7mwcsk38ss-cue-0.4.3//
-COPY --link nix/store/k7ggl56hmyxpiq7wfazmjgw1i5j9rnjy-c-0.0.1/ /nix/store/k7ggl56hmyxpiq7wfazmjgw1i5j9rnjy-c-0.0.1//
-COPY --link nix/store/sd3bp6jgzgzgpknhzwi85k6b8psjda9f-pcre-8.45/ /nix/store/sd3bp6jgzgzgpknhzwi85k6b8psjda9f-pcre-8.45//
-COPY --link nix/store/sspl6grqx8fs1j7icjg27i41aayxhvb2-util-linux-minimal-2.38.1-lib/ /nix/store/sspl6grqx8fs1j7icjg27i41aayxhvb2-util-linux-minimal-2.38.1-lib//
-COPY --link nix/store/sypwm392x9d506mk56vv4g4xm7ln2ygp-openssl-3.0.7/ /nix/store/sypwm392x9d506mk56vv4g4xm7ln2ygp-openssl-3.0.7//
 COPY --link nix/store/y0g1mvsr6vygr61f9znljik9kl0x0inc-bash-5.1-p16/ /nix/store/y0g1mvsr6vygr61f9znljik9kl0x0inc-bash-5.1-p16//
+COPY --link nix/store/yl3ilnrxc8fmwjc08x57qik6792zhah8-c-0.0.1/ /nix/store/yl3ilnrxc8fmwjc08x57qik6792zhah8-c-0.0.1//
 COPY --link nix/store/ynn1by1qdl16q6qwwh2h7zkgrn36c6i8-glibc-2.35-163/ /nix/store/ynn1by1qdl16q6qwwh2h7zkgrn36c6i8-glibc-2.35-163//
 COPY --link nix/store/z3wzds48bkfkn05qwc90294p14hflr6n-libunistring-1.0/ /nix/store/z3wzds48bkfkn05qwc90294p14hflr6n-libunistring-1.0//
 ENTRYPOINT [ "/bin/sh" ]
-ENV PATH /nix/store/0rdvmx28phx7r8dqf01xbvc44wpm9ipx-wget-1.21.3//bin:/nix/store/2hmdbfccrmh7a390k8ypqgivp4rjcnc4-libidn2-2.3.2//bin:/nix/store/6549jyzmdk7mqv3wvrqbqjr02zjp9csw-zlib-1.2.13//bin:/nix/store/c3asfannhylz6m58nrnizn7mwcsk38ss-cue-0.4.3//bin:/nix/store/k7ggl56hmyxpiq7wfazmjgw1i5j9rnjy-c-0.0.1//bin:/nix/store/sd3bp6jgzgzgpknhzwi85k6b8psjda9f-pcre-8.45//bin:/nix/store/sspl6grqx8fs1j7icjg27i41aayxhvb2-util-linux-minimal-2.38.1-lib//bin:/nix/store/sypwm392x9d506mk56vv4g4xm7ln2ygp-openssl-3.0.7//bin:/nix/store/y0g1mvsr6vygr61f9znljik9kl0x0inc-bash-5.1-p16//bin:/nix/store/ynn1by1qdl16q6qwwh2h7zkgrn36c6i8-glibc-2.35-163//bin:/nix/store/z3wzds48bkfkn05qwc90294p14hflr6n-libunistring-1.0//bin:/bin
+ENV PATH /nix/store/2hmdbfccrmh7a390k8ypqgivp4rjcnc4-libidn2-2.3.2//bin:/nix/store/y0g1mvsr6vygr61f9znljik9kl0x0inc-bash-5.1-p16//bin:/nix/store/yl3ilnrxc8fmwjc08x57qik6792zhah8-c-0.0.1//bin:/nix/store/ynn1by1qdl16q6qwwh2h7zkgrn36c6i8-glibc-2.35-163//bin:/nix/store/z3wzds48bkfkn05qwc90294p14hflr6n-libunistring-1.0//bin:/bin
