--- a/Makefile.common
+++ b/Makefile.common
@@ -379,7 +379,10 @@ platform ?= linux/amd64
 arch ?= amd64
 
 docker-nix:
-	bash -c 'source .env && docker build --platform $(platform) --target nix --build-arg arch=$(arch) --build-arg TAILSCALE=$${TAILSCALE} .'
+	bash -c 'source .env && docker build --platform $(platform) --target $(second) --build-arg arch=$(arch) --build-arg TAILSCALE=$${TAILSCALE} .'
+
+docker-tailscale:
+	bash -c 'source .env && docker build --platform $(platform) --target $(second) --build-arg arch=$(arch) --build-arg TAILSCALE=$${TAILSCALE} .'
 
 docker-k3d:
-	bash -c 'source .env && docker build --platform $(platform) --target k3d --build-arg arch=$(arch) .'
+	bash -c 'source .env && docker build --platform $(platform) --target $(second) --build-arg arch=$(arch) --build-arg TAILSCALE=$${TAILSCALE} .'
